samples/_failures_safe/1761184981_b57255_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98999476.c: In function ‘main’:
./samples/SAFE/__tmp_98999476.c:157:13: error: expected expression at end of input
  157 |             printf("Node indices must be between 0 and %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_98999476.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98999476.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98999476.c:157:13: error: expected declaration or statement at end of input
